# biped-gaits-mpc

./: README.md  adams_plant.mexw64  adams_sys_.mdl
1_ZMP-COMMinimal Energy Control/: nao_20180118_energy_optimal_thress_mass_dot1.m  nao_20180118_energy_optimal_thress_mass_parabola1.m  nao_20180118_energy_optimal_thress_mass_zhxian1.m  oldrobot_20180805_optimal_remake.m
1_ZMP-COMMinimal Energy Control/ZMP-COM-para/: nao_gait_planning_singlemass.m  oldrobot_201809_selfplanningZMP_singlemass.m
2_AnklePIDControlTest/: Ankle_pitchPIDtest.py  MpcCs50310-600.txt
3_PreviewControlTest/: DCM_NAO_flat_ground_online_with_posture_control_mode_adjust_pre.py  RiccatiCal.m  ZmpPlan.m  nao_20160504straight5_mod_2s_sensor_online.txt  preview_control.m
MPC-gait-m/: NMPC_2018_3robust3.m  nao201905singlemassConstantStep.m
NMPC（Windows）/: NMPC.opensdf  NMPC.sln
NMPC（Windows）/Debug/: NMPC.ilk
NMPC（Windows）/NMPC/: NMPC.vcxproj  NMPC.vcxproj.filters  main.cpp  mpclass.cpp  test_class.cpp  test_class.h
NMPC（Windows）/NMPC/Debug/: CL.read.1.tlog  CL.write.1.tlog  NMPC.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
NMPC（Windows）/NMPC/KMP/: kmp.cpp
NMPC（Windows）/NMPC/MPC/: MPCClass.cpp  MPCClass.h  spline.h
mpc_code（Linux）/: CMakeLists.txt  mpc_code.kdev4
mpc_code（Linux）/.kdev4/: mpc_code.kdev4
mpc_code（Linux）/matlab/: NMPC_2018_3robust3.m
mpc_code（Linux）/src/: CMakeLists.txt  main.cpp
mpc_code（Linux）/src/MPC/: MPCClass.h  MPClass.cpp
(+20 files in other folders)
